# dotsCLI

./: .gitignore  README.md  formatters.py  pyproject.toml
.github/workflows/: formatter-check.yml  publish-pypi.yml
dockerizer/: dts.py
dockerizer/samples/: docker-compose.yml
dockrizer/: dts.py
dotsCLI/: dts.py
dotsCLI/config/: settings.py
dotsCLI/docker/: parser.py
dotsCLI/samples/: config
