[tool.poetry]
name = "dockerizer"
version = "0.1.0"
description = "A command line interface for automating containerization"
authors = ["Yathartha Goenka <goenkayathartha2002@gmail.com>"]
readme = "README.md"

[tool.poetry.scripts]
dts = "dockerizer.dts:cli"

[tool.poetry.dependencies]
python = "^3.8"
click = "^8.1.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
